@@ -1,4 +1,5 @@
 <h4 style="float:left"><%= Date::MONTHNAMES[@selected_date.month] %> <%= @selected_date.year %></h4>
+<div style="clear:both"></div>
 <table style="width:100%;border-collapse:collapse;table-layout: fixed;"><%#= '<col width="14%"/>'*7 %>
   <thead>
     <tr>
