@@ -29,7 +29,7 @@
     </table>
   </div>
 <% end %>
-
+<div style="clear:both"></div>
 
 <div id="month-breakdown" style="min-height:486px;margin-top:-10px">
   <br /><br /><center><%= image_tag "ajax-loader.gif" %></center>
