@@ -12,6 +12,7 @@
     * Due Date
     * Status
   * Using Rails 3.2.0.rc1 and Contour 0.8.0
+  * Calendar updated have consistent look across browsers and operating systems
 
 * Refactoring
   * qTip2 is now provided by Contour 0.8.0
